[package]
name = "version-sync"
version = "0.9.2"
authors = ["Martin Geisler <martin@geisler.net>"]
description = "Crate for ensuring that version numbers in README files and other files are kept in sync with the crate version."
documentation = "https://docs.rs/version-sync/"
repository = "https://github.com/mgeisler/version-sync"
readme = "README.md"
keywords = ["version"]
categories = ["development-tools", "rust-patterns"]
license = "MIT"
edition = "2018"

[features]
markdown_deps_updated = ["pulldown-cmark", "semver-parser", "toml"]
html_root_url = ["url", "semver-parser", "syn", "proc-macro2"]
contains_regex = ["regex"]

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false, optional = true }
semver-parser = { version = "0.9", optional = true }
syn = { version = "1.0", default-features = false, features = ["parsing", "printing", "full"], optional = true }
proc-macro2 = { version = "1.0", default-features = false, features = ["span-locations"], optional = true }
toml = { version = "0.5", optional = true }
url = { version = "2.0", optional = true }
regex = { version = "1.3", default-features = false, features = ["std", "unicode"], optional = true }

[dev-dependencies]
tempfile = "3.1"
