[package]
name = "version-sync"
version = "0.9.4"
authors = ["Martin Geisler <martin@geisler.net>"]
description = "Crate for ensuring that version numbers in README files and other files are kept in sync with the crate version."
documentation = "https://docs.rs/version-sync/"
repository = "https://github.com/mgeisler/version-sync"
readme = "README.md"
keywords = ["version"]
categories = ["development-tools", "rust-patterns"]
license = "MIT"
edition = "2018"

[features]
default = ["markdown_deps_updated", "html_root_url_updated", "contains_regex"]
markdown_deps_updated = ["pulldown-cmark", "semver", "toml"]
html_root_url_updated = ["url", "semver", "syn", "proc-macro2"]
contains_regex = ["regex", "semver"]

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false, optional = true }
semver = { version = "1.0.5", optional = true }
syn = { version = "1.0.86", default-features = false, features = ["parsing", "printing", "full"], optional = true }
proc-macro2 = { version = "1.0.36", default-features = false, features = ["span-locations"], optional = true }
toml = { version = "0.5.8", optional = true }
url = { version = "2.2.2", optional = true }
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode"], optional = true }

[dev-dependencies]
tempfile = "3.3.0"
